// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthLinks - authenticated 1`] = `
<DocumentFragment>
  <a
    class="nhsuk-account__sign-in--link"
    href="/auth/signout"
    id="sign-out-link"
  >
    Sign out
  </a>
</DocumentFragment>
`;

exports[`AuthLinks - configuring 1`] = `
<DocumentFragment>
  <a
    class="nhsuk-account__sign-in--link"
    href="/auth"
    id="sign-in-link"
  >
    Sign in
  </a>
</DocumentFragment>
`;

exports[`AuthLinks - unauthenticated 1`] = `
<DocumentFragment>
  <a
    class="nhsuk-account__sign-in--link"
    href="/auth"
    id="sign-in-link"
  >
    Sign in
  </a>
</DocumentFragment>
`;
